Task manager working but still working on LLM integration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+openai:
+  api:
+    key:${OPENAI_API_KEY}
+logging:
+  level:
+    com.openai: DEBUG
